@@ -1,4 +1,4 @@
-# $Id: iterate.tcl,v 1.5 1996-08-21 11:24:01 adam Exp $
+# $Id: iterate.tcl,v 1.6 1997-04-13 19:00:43 adam Exp $
 #
 # Small test script which searches for science ...
 proc fail-back {} {
@@ -7,7 +7,6 @@ proc fail-back {} {
 
 proc connect-response {} {
     z callback {init-response}
-    ir-set z.1 z
     z init
 }
 proc init-response {} {
@@ -23,20 +22,24 @@ proc do-search {} {
 
     incr count
     puts $count
+    catch {rename z.1 {}}
+    ir-set z.1 z
     z callback {search-response}
-    z.1 search science
+    z.1 preferredRecordSyntax sutrs
+    z.1 search the
 }
 
 proc search-response {} {
     set hits [z.1 resultCount]
     if {$hits <= 0} {
         do-search
+        return
     }
     z callback {present-response}
-    if {$hits < 10} {
+    if {$hits < 20} {
         z.1 present 1 $hits
     } else {
-        z.1 present 1 10
+        z.1 present 1 20
     }
 }
 
@@ -46,7 +49,7 @@ proc present-response {} {
 
 ir z
 z failback {fail-back}
-z databaseNames dummy
+z databaseNames Default
 z callback {connect-response}
 z connect localhost:9999
 vwait forever
