@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.29 1996-11-14 17:11:03 adam Exp $
+$Id: CHANGELOG,v 1.30 1997-04-13 19:00:34 adam Exp $
 
 06/19/95 Release of ir-tcl-1.0b
 ------------------------------------------------------
@@ -113,4 +113,8 @@ $Id: CHANGELOG,v 1.29 1996-11-14 17:11:03 adam Exp $
 09/03/96 Bug fix: configure script could fail if yaz couldn't be located.
 
 11/14/96 Added some Explain documentation.
+
+04/13/96 Added support for Tcl8.0/Tk8.0.
+
+04/13/96 Added ir-log-init command.
 
